# codex-swarm

./: .gitignore  AUDIT_REPORT.md  README.md  UX_RELIABILITY_PLAN.md  pyproject.toml  run.sh
.claude/: settings.local.json
docs/: DOMAIN_MODES.md  DRAFTPUNK_CHANGES.md  DRAFTPUNK_INTEGRATION.md  architecture.md  ux.md
examples/: draftpunk_example.py
scripts/: __init__.py  crossrun.py  devservers.sh
src/: draftpunk_client.py
src/app/: __init__.py  config.py  database.py  errors.py  events.py  migrations.py  models.py  schemas.py  utils.py
src/app/api/: deps.py  main.py
src/app/api/routes/: __init__.py  patterns.py  projects.py  runs.py  ui.py
src/app/domains/: __init__.py  config.py
src/app/domains/instructions/: code_mode.txt  data_mode.txt  document_mode.txt  research_mode.txt  writing_mode.txt
src/app/repositories/: __init__.py  artifacts.py  patterns.py  projects.py  runs.py  steps.py
src/app/runner/: __init__.py  codex_tool.py  main.py
src/app/services/: __init__.py  diff.py  machine_summary.py  pattern_agent.py  run_service.py  runner_client.py
src/app/services/patterns/: __init__.py
src/app/services/patterns/extractors/: __init__.py  base.py  code.py  data.py  document.py  research.py  writing.py
tests/: conftest.py  test_live_api.py  test_workspace_security.py
