[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codex-swarm-runner"
version = "0.1.0"
description = "Cross-run context injection prototype (API + Swarm runner + Codex tooling)"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.111.0,<0.112.0",
  "uvicorn[standard]>=0.29.0,<0.31.0",
  "pydantic>=2.7.0,<3.0.0",
  "pydantic-settings>=2.2.0,<3.0.0",
  "sqlalchemy>=2.0.28,<3.0.0",
  "aiosqlite>=0.20.0,<1.0.0",
  "greenlet>=3.0.3,<4.0.0",
  "httpx>=0.27.0,<0.28.0",
  "typer>=0.12.0,<0.13.0",
  "python-ulid>=1.1.0,<2.0.0",
  "python-dotenv>=1.0.0,<2.0.0",
  "rich>=13.0.0,<14.0.0",
  "swarm @ git+https://github.com/openai/swarm.git"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0,<9.0.0",
  "pytest-asyncio>=0.23.0,<1.0.0",
  "ruff>=0.4.0,<0.5.0"
]

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
line-length = 100
target-version = "py310"
